--- a/bio.html
+++ b/bio.html
@@ -39,7 +39,7 @@
 
 <div class="worksParagraphDiv">
 <p class="worksParagraph"><b>Biography</b><br>
-    Andrew Pfalz holds degrees in composition from Florida State University (BM 2011) and East Carolina University (MM 2014). His music explores the augmentation of performers' capabilities through computer programming. His research is currently focused on the historical development of experimental techniques and practices in the twentieth century.<br></p></div><br><br><br><br><br><br><br>
+    Andrew Pfalz holds degrees in composition from Florida State University (BM 2011) and East Carolina University (MM 2014). He is currently working on his PhD in Experimental Music and Digital Media at Louisiana State University. His music explores the augmentation of performers' capabilities through computer programming. His research is currently focused on the historical development of experimental techniques and practices in the twentieth century.<br></p></div><br><br><br><br><br><br><br>
     <img src="profilePicture.jpg" height="370" width="500" style="margin-left:11em">
    <br>
     <br>
